fix title spacing

--- a/react-vite/src/components/EditCardModal/EditCardModal.css
+++ b/react-vite/src/components/EditCardModal/EditCardModal.css
@@ -24,6 +24,13 @@
   padding: 5px 10px;
 }
 
+.card-title-input {
+  width: 100%;
+  border: none;
+  font-size: 1.1rem;
+  font-weight: bold;
+  padding: 5px 10px;
+}
 .card-title:hover{
   background-color: #d1d2d571;
   cursor: pointer;
